Enhance home screen optimization with animated timeline and step-based optimization
- Added detailed optimization steps with timeline visualization
- Implemented animations for optimization process
- Added new translation keys for optimization steps
- Created OptimizeStep class to manage optimization stages
- Introduced fade, slide, and scale animations during optimization
- Added done button after optimization completion
- Improved user experience with step-by-step optimization feedback

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -33,5 +33,15 @@
   "excellent": "Excellent",
   "good": "Good",
   "average": "Average",
-  "critical": "Critical"
+  "critical": "Critical",
+  "cpu_optimizing": "Optimizing CPU",
+  "ram_optimizing": "Optimizing RAM",
+  "battery_optimizing": "Optimizing Battery",
+  "cache_optimizing": "Optimizing Cache",
+  "optimization_completed": "Optimization Completed",
+  "cpu_optimized": "CPU Optimized",
+  "ram_optimized": "RAM Optimized",
+  "battery_optimized": "Battery Optimized",
+  "cache_optimized": "Cache Optimized",
+  "done": "Done"
 } 
