Simplify optimization translation labels
- Removed verbose optimization status text in English and Turkish translations
- Shortened optimization step and result labels
- Maintained clarity while reducing text verbosity
- Updated both en.json and tr.json translation files

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -34,14 +34,14 @@
   "good": "Good",
   "average": "Average",
   "critical": "Critical",
-  "cpu_optimizing": "Optimizing CPU",
-  "ram_optimizing": "Optimizing RAM",
-  "battery_optimizing": "Optimizing Battery",
-  "cache_optimizing": "Optimizing Cache",
+  "cpu_optimizing": "CPU",
+  "ram_optimizing": "RAM",
+  "battery_optimizing": "Battery",
+  "cache_optimizing": "Cache",
   "optimization_completed": "Optimization Completed",
-  "cpu_optimized": "CPU Optimized",
-  "ram_optimized": "RAM Optimized",
-  "battery_optimized": "Battery Optimized",
-  "cache_optimized": "Cache Optimized",
+  "cpu_optimized": "CPU",
+  "ram_optimized": "RAM",
+  "battery_optimized": "Battery",
+  "cache_optimized": "Cache",
   "done": "Done"
 } 
