--- a/assets/translations/tr.json
+++ b/assets/translations/tr.json
@@ -34,14 +34,14 @@
   "good": "İyi",
   "average": "Orta",
   "critical": "Kritik",
-  "cpu_optimizing": "İşlemci Optimize Ediliyor",
-  "ram_optimizing": "RAM Optimize Ediliyor",
-  "battery_optimizing": "Pil Optimize Ediliyor",
-  "cache_optimizing": "Önbellek Optimize Ediliyor",
+  "cpu_optimizing": "İşlemci",
+  "ram_optimizing": "RAM",
+  "battery_optimizing": "Pil",
+  "cache_optimizing": "Önbellek",
   "optimization_completed": "Optimizasyon Tamamlandı",
-  "cpu_optimized": "İşlemci Optimize Edildi",
-  "ram_optimized": "RAM Optimize Edildi",
-  "battery_optimized": "Pil Optimize Edildi",
-  "cache_optimized": "Önbellek Optimize Edildi",
+  "cpu_optimized": "İşlemci",
+  "ram_optimized": "RAM",
+  "battery_optimized": "Pil",
+  "cache_optimized": "Önbellek",
   "done": "Tamamlandı"
 } 
