Add RAM cleaner screen localization and UI improvements
- Updated RAM cleaner screen with localized translations
- Added translation keys for RAM usage status and screen labels
- Implemented localization for RAM cleaner button and status texts
- Extended app's translation support for RAM cleaner functionality
- Improved screen layout with transparent app bar and localized content

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -43,5 +43,11 @@
   "ram_optimized": "RAM",
   "battery_optimized": "Battery",
   "cache_optimized": "Cache",
-  "done": "Done"
+  "done": "Done",
+  "optimizing_status": "Optimizing",
+  "optimized_status": "Optimized",
+  "ram_cleaner": "RAM Cleaner",
+  "ram_usage_low": "Low Usage",
+  "ram_usage_normal": "Normal Usage",
+  "ram_usage_high": "High Usage"
 } 
