Add theme settings and dynamic theme support
- Implemented theme service with light and dark theme configurations
- Added theme mode selection in settings screen
- Integrated theme persistence using shared preferences
- Updated translations with theme-related keys
- Refactored main app to support dynamic theme switching
- Added theme mode parameter to home and settings screens

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -49,5 +49,9 @@
   "ram_cleaner": "RAM Cleaner",
   "ram_usage_low": "Low Usage",
   "ram_usage_normal": "Normal Usage",
-  "ram_usage_high": "High Usage"
+  "ram_usage_high": "High Usage",
+  "theme": "Theme",
+  "theme_settings": "Theme Settings",
+  "light_theme": "Light Theme",
+  "dark_theme": "Dark Theme"
 } 
