Enhance RAM cleaner screen with improved status handling and user feedback
- Added dynamic status indicators for RAM cleaning process
- Implemented new state management for clean button and status display
- Updated translations to clarify RAM cleaning status
- Added loading and success state visualizations
- Improved ad reward interaction and error handling in RAM cleaning flow

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -3,7 +3,7 @@
   "clean_ram": "Clean RAM",
   "clean_cache": "Clean Cache",
   "cleaning": "Cleaning...",
-  "cleaned": "Cleaned!",
+  "cleaned": "RAM Cleaned!",
   "ram_usage": "RAM Usage",
   "cache_size": "Cache Size",
   "optimization": "Optimize",
